--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Professional Drum Kit</title>
     <link href="https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css" integrity="sha512-9xKTRVabjVeZmc+GUW8GgSmcREDunMM+Dt/GrzchfN8tkwHizc5RP4Ok/MXFFy5rIjJjzhndFScTceq5e6GvVQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="container">
@@ -23,11 +24,29 @@
             <label for="volume">Volume:</label>
             <input type="range" id="volume" min="0" max="1" step="0.1" value="1">
         </div>
+        
+        <div class="contact-section">
+            <h2>Connect With Me</h2>
+            <div class="social-links">
+                <a href="https://x.com/NishulDhakar" target="_blank" class="social-link">
+                  <i class="fa-brands fa-x-twitter"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/nishuldhakar/" target="_blank" class="social-link">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="https://www.instagram.com/nishuldhakar/" target="_blank" class="social-link">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://github.com/nishuldhakar" target="_blank" class="social-link">
+                    <i class="fab fa-github"></i>
+                </a>
+            </div>
+        </div>
+
         <footer>
-            © 2024 Professional Drum Kit | Created with ♥ by Web Developer
+            © 2024 Professional Drum Kit | Created with ♥ by Nishul Dhakar
         </footer>
     </div>
-
-<script src="index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
